--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "4673bfd0",
    "metadata": {},
    "outputs": [
@@ -1378,13 +1378,12 @@
     "    \"\"\"\n",
     "    with p1 as (\n",
     "    select \n",
-    "        title, published_date, author_name, total_review\n",
+    "        publisher, count(distinct paernt_asin)\n",
+    "        -- title, published_date, author_name, total_review\n",
     "    from processed_metadata a\n",
-    "    left join (select parent_asin, count(1) as total_review from books_reviews group by 1) b\n",
-    "        using(parent_asin)\n",
-    "    -- where author_name = 'John Grisham'\n",
-    "    order by total_review desc\n",
-    ")\n",
+    "\n",
+    "    group by 1\n",
+    "    order by 2 desc)\n",
     "\n",
     "    select author_name, sum(total_review) from p1 group by 1 order by 2 desc\n",
     "\"\"\"\n",
